# SWE-bench-Live

./: .gitignore  .gitmodules  Development.md  README.md  pyproject.toml  run_swebench_local.py  run_swebench_modal_selfhosted.py
launch/: .gitignore  README.md  pyproject.toml  test-config.json
launch/data/examples/: test-config.json
launch/docs/: Development-Windows.md  Development.md
launch/git_launch/: __init__.py  launch.py  run.py  runtime.py  workflow.py
launch/git_launch/agent/: base_image.py  locate.py  prompt.py  setup.py  state.py  verify.py
launch/git_launch/utilities/: config.py  llm.py  logger.py  timemachine.py  utils.py
launch/launch/: __init__.py  run.py  runtime.py
launch/launch/agent/: action_parser.py  base_image.py  locate.py  setup.py  state.py  utils.py  verify.py
launch/launch/agent/organize/: parselog.py  rebuild.py  save.py  testall.py  testone.py
launch/launch/agent/setup/: save.py  setup.py  verify.py
launch/launch/core/: entry.py  runtime.py  workflow.py
launch/launch/scripts/: clear_failed_instance.py  clear_image.py  collect.py  parser.py  recollect.py  upload_docker.py
launch/launch/utilities/: config.py  language_handlers.py  llm.py  logger.py  timemachine.py  utils.py
launch/launch/utilities/dockerfiles/windows_server_c_cpp/ltsc2025_cmake_ninja_vsbuildtools_cl_msbuild/: Dockerfile
launch/launch/utilities/dockerfiles/windows_server_c_cpp/ltsc_2019_cmake_ninja_only/: Dockerfile
launch/launch/utilities/dockerfiles/windows_server_c_cpp/ltsc_2022_cmake_ninja_only/: Dockerfile
launch/launch/utilities/dockerfiles/windows_server_rust/170/: Dockerfile
(+31 files in other folders)
